--- a/docker/default/docker-compose.yml
+++ b/docker/default/docker-compose.yml
@@ -12,8 +12,10 @@ services:
       timeout: 5s
       retries: 10
       start_period: 5s
-    networks:
-      - sbdb-network
+    extends:
+      file: common-config.yml
+      services: network-deploy-service
+
   configserver:
     image: "artcorb/sbdb-configserver:0.0.1-SNAPSHOT"
     container_name: sbdb-configserver
@@ -30,12 +32,10 @@ services:
       timeout: 5s
       retries: 10
       start_period: 10s
-    deploy:
-      resources:
-        limits:
-          memory: 700m
-    networks:
-      - sbdb-network
+    extends:
+      file: common-config.yml
+      service: microservice-base-config
+
   accounts:
     image: "artcorb/sbdb-ms-accounts:0.0.1-SNAPSHOT"
     container_name: sbdb-ms-accounts
@@ -45,16 +45,12 @@ services:
     depends_on:
       configserver:
         condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          memory: 700m # define the memory allocation 
-    networks:
-      - sbdb-network # put the microservices in the same network, for enable the communication with each other 
     environment:
       - SPRING_APPLICATION_NAME: "accounts"
-      - SPRING_CONFIG_IMPORT: "configserver:http://configserver:8888/"
-      - SPRING_PROFILE_ACTIVE: default
+    extends:
+      file: common-config.yml
+      service: microservice-configserver-config
+
   cards:
     image: "artcorb/sbdb-ms-cards:0.0.1-SNAPSHOT"
     container_name: sbdb-ms-cards
@@ -63,16 +59,12 @@ services:
     depends_on:
       configserver:
         condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          memory: 700m
-    networks:
-      - sbdb-network
     environment:
       - SPRING_APPLICATION_NAME: "cards"
-      - SPRING_CONFIG_IMPORT: "configserver:http://configserver:8888/"
-      - SPRING_PROFILE_ACTIVE: default
+    extends:
+      file: common-config.yml
+      service: microservice-configserver-config
+
   loans:
     image: "artcorb/sbdb-ms-loans:0.0.1-SNAPSHOT"
     container_name: sbdb-ms-loans
@@ -81,16 +73,12 @@ services:
     depends_on:
       configserver:
         condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          memory: 700m
-    networks:
-      - sbdb-network
     environment:
       - SPRING_APPLICATION_NAME: "loans"
-      - SPRING_CONFIG_IMPORT: "configserver:http://configserver:8888/"
-      - SPRING_PROFILE_ACTIVE: default
+    extends:
+      file: common-config.yml
+      service: microservice-configserver-config
+
 networks:
   sbdb-network:
     driver: "bridge" # create the network with the name "sbdb-network"
