--- a/docker/default/docker-compose.yml
+++ b/docker/default/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       start_period: 5s
     extends:
       file: common-config.yml
-      services: network-deploy-service
+      service: network-deploy-service
 
   configserver:
     image: "artcorb/sbdb-configserver:0.0.1-SNAPSHOT"
@@ -46,7 +46,7 @@ services:
       configserver:
         condition: service_healthy
     environment:
-      - SPRING_APPLICATION_NAME: "accounts"
+      SPRING_APPLICATION_NAME: "accounts"
     extends:
       file: common-config.yml
       service: microservice-configserver-config
@@ -60,7 +60,7 @@ services:
       configserver:
         condition: service_healthy
     environment:
-      - SPRING_APPLICATION_NAME: "cards"
+      SPRING_APPLICATION_NAME: "cards"
     extends:
       file: common-config.yml
       service: microservice-configserver-config
@@ -74,7 +74,7 @@ services:
       configserver:
         condition: service_healthy
     environment:
-      - SPRING_APPLICATION_NAME: "loans"
+      SPRING_APPLICATION_NAME: "loans"
     extends:
       file: common-config.yml
       service: microservice-configserver-config
