--- a/docker/prd/docker-compose.yml
+++ b/docker/prd/docker-compose.yml
@@ -1,4 +1,34 @@
 services:
+  sbdb-db-accounts:
+    container_name: sbdb-db-accounts
+    ports:
+      - 3306:3306
+    environment:
+      MYSQL_DATABASE: sbdb-db-accounts
+    extends:
+      file: common-config.yml
+      service: microservice-db-config
+
+  sbdb-db-loans:
+    container_name: sbdb-db-loans
+    ports:
+      - 3307:3306
+    environment:
+      MYSQL_DATABASE: sbdb-db-loans
+    extends:
+      file: common-config.yml
+      service: microservice-db-config
+
+  sbdb-db-cards:
+    container_name: sbdb-db-cards
+    ports:
+      - 3308:3306
+    environment:
+      MYSQL_DATABASE: sbdb-db-cards
+    extends:
+      file: common-config.yml
+      service: microservice-db-config
+
   rabbit:
     image: rabbitmq:3.13-management
     hostname: rabbitmq
@@ -43,24 +73,11 @@ services:
       - "8080:8080" # in/out ports for the microservice
     # verifica se configserver está operante antes de subir
     depends_on:
-      configserver:
+      sbdb-db-accounts:
         condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "accounts"
-    extends:
-      file: common-config.yml
-      service: microservice-configserver-config
-
-  cards:
-    image: "artcorb/sbdb-ms-cards:0.0.1-SNAPSHOT"
-    container_name: sbdb-ms-cards
-    ports:
-      - "8081:8081"
-    depends_on:
-      configserver:
-        condition: service_healthy
-    environment:
-      SPRING_APPLICATION_NAME: "cards"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://sbdb-db-accounts:3306/sbdb-db-accounts" # communication between containers
     extends:
       file: common-config.yml
       service: microservice-configserver-config
@@ -71,10 +88,26 @@ services:
     ports:
       - "8082:8082"
     depends_on:
-      configserver:
+      sbdb-db-loans:
         condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "loans"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://sbdb-db-loans:3307/sbdb-db-loans" # communication between containers
+    extends:
+      file: common-config.yml
+      service: microservice-configserver-config
+
+  cards:
+    image: "artcorb/sbdb-ms-cards:0.0.1-SNAPSHOT"
+    container_name: sbdb-ms-cards
+    ports:
+      - "8081:8081"
+    depends_on:
+      sbdb-db-cards:
+        condition: service_healthy
+    environment:
+      SPRING_APPLICATION_NAME: "cards"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://sbdb-db-cards:3308/sbdb-db-cards" # communication between containers
     extends:
       file: common-config.yml
       service: microservice-configserver-config
