--- a/docker/prd/common-config.yml
+++ b/docker/prd/common-config.yml
@@ -26,17 +26,23 @@ services:
     environment:
       SPRING_RABBITMQ_HOST: "rabbit"
 
-  common-ms-config:
+  common-configserver-config:
     extends:
       service: common-base-config
     depends_on:
       configserver:
-        condition: service_healthy
-      eurekaserver:
         condition: service_healthy
     environment:
       SPRING_PROFILES_ACTIVE: prd
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8888/
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: root
+
+  common-eurekaserver-config:
+    extends:
+      service: common-configserver-config
+    depends_on:
+      eurekaserver:
+        condition: service_healthy
+    environment:
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
