--- a/docker/prd/docker-compose.yml
+++ b/docker/prd/docker-compose.yml
@@ -50,6 +50,18 @@ services:
       file: common-config.yml
       service: network-deploy-service
 
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: [ "CMD-SHELL", "redis-cli ping | grep PONG" ]
+      timeout: 10s
+      retries: 10
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
   configserver:
     image: "artcorb/sbdb-configserver:0.0.1-SNAPSHOT"
     container_name: sbdb-configserver
@@ -162,7 +174,6 @@ services:
     container_name: sbdb-gatewayserver
     ports:
       - "8072:8072"
-    # só vai subir se os healthchecks passarem
     depends_on:
       accounts:
         condition: service_healthy
@@ -170,8 +181,14 @@ services:
         condition: service_healthy
       cards:
         condition: service_healthy
+      redis:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "gatewayserver"
+      SPRING_DATA_REDIS_CONNECT-TIMEOUT: 2s
+      SPRING_DATA_REDIS_HOST: redis
+      SPRING_DATA_REDIS_PORT: 6379
+      SPRING_DATA_REDIS_TIMEOUT: 1s
     extends:
       file: common-config.yml
       service: common-eurekaserver-config
