--- a/docker/qa/docker-compose.yml
+++ b/docker/qa/docker-compose.yml
@@ -33,6 +33,19 @@ services:
       file: common-config.yml
       service: common-db-config
 
+  keycloak:
+    image: quay.io/keycloak/keycloak:22.0.1
+    container_name: keycloak
+    ports:
+      - "7080:8080"
+    environment:
+      - KEYCLOAK_ADMIN: "admin"
+      - KEYCLOAK_ADMIN_PASSWORD: "admin"
+    command: "start-dev"
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
   # ------------------------------------------------------------------------------
   # Start Grafana services -------------------------------------------------------
   # ------------------------------------------------------------------------------
@@ -329,8 +342,6 @@ services:
   accounts:
     image: "artcorb/sbdb-ms-accounts:0.0.1-SNAPSHOT"
     container_name: sbdb-ms-accounts
-    ports:
-      - "8080:8080" # in/out ports for the microservice
     # verifica se configserver está operante antes de subir
     depends_on:
       sbdb-db-accounts:
@@ -353,8 +364,6 @@ services:
   loans:
     image: "artcorb/sbdb-ms-loans:0.0.1-SNAPSHOT"
     container_name: sbdb-ms-loans
-    ports:
-      - "8090:8090"
     depends_on:
       sbdb-db-loans:
         condition: service_healthy
@@ -376,8 +385,6 @@ services:
   cards:
     image: "artcorb/sbdb-ms-cards:0.0.1-SNAPSHOT"
     container_name: sbdb-ms-cards
-    ports:
-      - "9000:9000"
     depends_on:
       sbdb-db-cards:
         condition: service_healthy
@@ -417,6 +424,7 @@ services:
       SPRING_DATA_REDIS_PORT: 6379
       SPRING_DATA_REDIS_TIMEOUT: 1s
       OTEL_SERVICE_NAME: "gatewayserver"
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK-SET-URI: "http://keycloak:8080/realms/master/protocol/openid-connect/certs"
     extends:
       file: common-config.yml
       service: common-eurekaserver-config
