--- a/docker/qa/docker-compose.yml
+++ b/docker/qa/docker-compose.yml
@@ -34,13 +34,13 @@ services:
       service: common-db-config
 
   keycloak:
-    image: quay.io/keycloak/keycloak:22.0.1
+    image: quay.io/keycloak/keycloak:25.0.2
     container_name: keycloak
     ports:
       - "7080:8080"
     environment:
-      - KEYCLOAK_ADMIN: "admin"
-      - KEYCLOAK_ADMIN_PASSWORD: "admin"
+      KEYCLOAK_ADMIN: "admin"
+      KEYCLOAK_ADMIN_PASSWORD: "admin"
     command: "start-dev"
     extends:
       file: common-config.yml
